--- a/format.css
+++ b/format.css
@@ -7,6 +7,6 @@ h1, h2	{
 	background-color: #a1d3e3
 	}
 body	{
-	background-image: url ("");
+	background-image: url ("https://github.com/BeeMovie3/PooPee/blob/master/Dj6AaejBFA9dlXvL5KhFhXOt8uZe_uEYfET34gsJubM.jpg);
 	background-repeat: no-repeat;
 	}
